--- a/css/index.css
+++ b/css/index.css
@@ -54,10 +54,16 @@ justify-content: center;
     font-size: 20px;
 }
 
+.nav-links li a:hover {
+    display: block; 
+    color: yellowgreen;
+    transition: all, 0.5s, ease;
+}
+/* 
 .header h3{
     font-weight: 400;
     font-size: 1.5rem;
-}
+} */
 
 /* must not display burger menu initially */
 .burger{
@@ -70,6 +76,11 @@ justify-content: center;
     width: 30px;
     height: 3px;
     margin: 0 0 8px 0;
+}
+
+.burger:hover{
+    opacity: 0.8;
+    cursor: pointer;
 }
 
 .content{
@@ -89,9 +100,17 @@ img {
     border: 3px solid green;
 }
 
+ /* img:hover{ */
+    /* opacity: 0.8; */
+    /* cursor: pointer; */
+/* }  */
+
 .btn:hover{
     opacity: 0.8;
+    cursor: pointer;
 }
+
+
 
 /* rule for screens <= 700 pixels */
 
@@ -106,11 +125,26 @@ img {
         position: absolute;
         top: 8.8rem;
         right: -50%;
+        width: 25%;  
+        opacity: 0.9;
+        transition: all, 0.5s, ease;
     }
     .nav-links li a:hover {
         display: block; 
         color: yellowgreen;
         transition: all, 0.5s, ease;
+    }
+    .show-nav-links{
+        right: 0;
+        
+    }
+
+    .nav-links li{
+        height: 15%;
+       font-size: 20px;
+    }
+    .burger:hover{
+    color: yellowgreen;
     }
     
     
