adds carousel template to mealpage

--- a/css/mealpage.css
+++ b/css/mealpage.css
@@ -14,6 +14,7 @@ body{
     width: 75%;
     max-width: 1120px;
     margin: auto;
+    height: 100vh;
 }
 /* style navbar items */
 a{
@@ -80,4 +81,59 @@ justify-content: center;
 .burger:hover{
     opacity: 0.8;
     cursor: pointer;
+}
+
+/* Carousel Styling */
+.carousel-body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(204, 204, 204);
+}
+.carousel{
+    position: relative;
+    height: 500px;
+    width: 800px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.wrapper{
+    display: flex; 
+    transform: translateX(0);
+    transition: all 0.5s ease-in-out;
+}
+.wrapper img{
+    width: 800px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+.buttons{
+    position: absolute;
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+button{
+    background: transparent;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    height: 60vh;
+    border-radius: 10px;
+    transition: all 0.5s ease-out;
+    background: rgba(0, 0, 0, 0.1);
+}
+button i{
+    font-size: 2rem;
+
+}
+button:hover{
+    background: rgba(0, 0, 0, 0.4);
 }
