complete meal heading and meal image carousel components

--- a/css/mealpage.css
+++ b/css/mealpage.css
@@ -118,8 +118,9 @@ justify-content: center;
     align-items: center;
     justify-content: center;
     height: 50vh;
-    /* background: rgb(204, 204, 204); */
-    background-color: #39b846;
+    background: rgb(204, 204, 204);
+    /* background-color: #39b846; */
+    
     width: 75%;
     max-width: 1120px;
     margin: auto;
