--- a/css/test.css
+++ b/css/test.css
@@ -1,16 +1,130 @@
 /* Carousel Styling */
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;  
+}
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 1.9;
+    overflow: hidden; 
+}
+.main-container{
+    background-color: whitesmoke;
+    width: 75%;
+    max-width: 1120px;
+    margin: auto;
+    height: 100vh;
+}
+/* style navbar items */
+a{
+    color: whitesmoke;
+    text-decoration: none;
+}
+/* remove style (bullet point) from nav list items */
+li{
+    list-style: none;
+}
+/* container located inside section */
+.container{
+    width: 75%;
+    max-width: 1120px;
+    margin: auto; 
 }
 
-body{
+header{
+    background-color: #39b846;
+    color: whitesmoke;
+    padding: 0.5rem,1rem;
+    width: 75%;
+    max-width: 1120px;
+    margin: auto;
+}
+
+.header{
+    display: flex;
+    align-items: centre;
+    justify-content: space-between;  
+    box-shadow: 0 17px 10px -10px rgba(0, 0, 0, 0.5);  
+}
+
+.nav-links{
+display: flex;
+align-items: center;
+/* centre nav links vertically on header */
+justify-content: center;
+}
+
+.nav-links li{
+    margin: 0 1rem;
+    font-size: 20px;
+}
+
+.nav-links li a:hover {
+    display: block; 
+    color: yellowgreen;
+    transition: all, 0.5s, ease;
+}
+/* must not display burger menu initially */
+.burger{
+    display: none;
+    margin-top: 60px;
+}
+/* style burger menu */
+.burger div{
+    background-color: whitesmoke;
+    width: 30px;
+    height: 3px;
+    margin: 0 0 8px 0;
+}
+
+.burger:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
+/* Display Headers on Main Content */
+
+
+.selections {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+  }
+  .selections h3 {
+    margin-right: 10px; /* spacing */
+  }
+
+  .controls {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+  }
+  .controls button,
+  .controls h1 {
+    margin-right: 10px; 
+  }
+
+  .container-select {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+/* Carousel Styling */
+.carousel-body{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 50vh;
     background: rgb(204, 204, 204);
+    /* background-color: #39b846; */
+    
+    width: 75%;
+    max-width: 1120px;
+    margin: auto;
 }
 .carousel{
     position: relative;
@@ -42,18 +156,10 @@ body{
 }
 button{
     background: transparent;
-    color: #fff;
+    color: black;
     border: none;
     cursor: pointer;
-    width: 100px;
-    height: 60vh;
     border-radius: 10px;
     transition: all 0.5s ease-out;
     background: rgba(0, 0, 0, 0.1);
-}
-button i{
-    font-size: 2rem;
-}
-button:hover{
-    background: rgba(0, 0, 0, 0.4);
 }
