--- a/css/index.css
+++ b/css/index.css
@@ -2,17 +2,18 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;  
+    box-sizing: border-box; 
+    font-family: 'Poppins',sans-serif; 
 }
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
     line-height: 1.9;
-    overflow: hidden; 
+    overflow: scroll;
 }
 .main-container{
     background-color: whitesmoke;
-    width: 75%;
+    /* width: 75%; */
     max-width: 1120px;
     margin: auto;
 }
@@ -26,7 +27,7 @@ li{
     list-style: none;
 }
 .container{
-    width: 75%;
+    /* width: 75%; */
     max-width: 1120px;
     margin: auto; 
 }
@@ -35,12 +36,12 @@ header{
     background-color: #39b846;
     color: whitesmoke;
     padding: 0.5rem,1rem;
-    width: 75%;
+    /* width: 75%; */
     max-width: 1120px;
     margin: auto;
 }
 
-.header{
+.navbar-main{
     display: flex;
     align-items: centre;
     justify-content: space-between;  
@@ -82,18 +83,16 @@ justify-content: center;
     cursor: pointer;
 }
 
-.content-location{
+/* .content-location{
     margin: 2rem 0;
     background-color: #3ACBE8;
-}
-.content-condition{
-    margin: 2rem 0;
-    background-color:#cff09e;
+} */
+/* .content-condition{
+   
 }
 .content-mealtime{
-    margin: 2rem 0;
-    background-color: #fbda03;
-}
+    
+} */
 .btn{
     padding: 0.5rem 2rem;
     width: 100%;
@@ -103,18 +102,23 @@ justify-content: center;
     outline: none;
     font-size: 16px;
 }
-.header img {
+.navbar-main img {
     border: 3px solid #39b846;
 }
 
-/* --- */
+
 .content-location {
     display: flex;
+    margin: 2rem 0;
     flex-flow: row wrap;
+    /* background-color: #3ACBE8; */
     box-shadow: 0 17px 10px -10px rgba(0, 0, 0, 0.5);
   }
   .location-image {
     border: 2px solid #3ACBE8; 
+    text-align: center;
+    display: flex;
+    flex-direction: column;
     
   }
   .parent-location {
@@ -232,7 +236,7 @@ justify-content: center;
     margin-top: 10px;
     font-size: 22px;
   }
-  /* --- */
+  
   .content-mealtime {
     display: flex;
     flex-flow: row wrap;
@@ -294,8 +298,6 @@ justify-content: center;
     margin-top: 10px;
     font-size: 22px;
   }
-
-  /* --- */
 .dropdown{
     display: inline-block;
     
@@ -331,24 +333,10 @@ justify-content: center;
 .dropdown option:hover{
     background-color: hsl(0, 0%, 90%);
 }
-/* ---- */
-
-
-
-
-/* .content-condition img {
-    border: 2px solid #39b846;
-    display: flex; 
-  } */
   .content-mealtime img {
     border: 2px solid #fbda03; 
     display: flex;
   }
-
- /* img:hover{ */
-    /* opacity: 0.8; */
-    /* cursor: pointer; */
-/* }  */
 
 .btn:hover{
     opacity: 0.8;
@@ -377,18 +365,19 @@ justify-content: center;
 footer{
     background-color: #39b846;
     min-height: 130px;
-    width: 75%;
+    /* width: 75%; */
     max-width: 1120px;
     margin: auto;
     box-shadow: 0 17px 10px -10px rgba(0, 0, 0, 0.5);
 }
 
 
+
 /* rule for screens <= 700 pixels */
 
-@media screen and (max-width: 800px) {
-    body{
-        
+@media screen and (max-width: 700px) {
+    .main-container{  
+      
         overflow: scroll;
     }
     /* navbar mobile */
@@ -404,6 +393,7 @@ footer{
         width: 25%;  
         opacity: 0.9;
         transition: all, 0.5s, ease;
+        display: none;
     }
 
     .nav-links li a:hover {
@@ -412,9 +402,10 @@ footer{
         transition: all, 0.5s, ease;
     }
 
-    .show-nav-links{
-        right: 165;
-    }
+    .show-nav-links {
+      right: 165px;
+      display: block;
+  }
 
     .nav-links li{
         height: 15%;
@@ -426,27 +417,14 @@ footer{
     }
 
     .head-container{
-        width: 75%;
+        /* width: 75%; */
+        
+        flex: auto;
     }
 
     .dropdown{
       padding-top: 20px;
   }
-
-    /* location container for mobile */
-    .location-image img{
-        padding-top: 20px;
-        padding-left: 100px;  
-    }
-    /* condition container for mobile */
-    .condition-image img{
-        padding-top: 20px;
-        padding-left: 100px;  
-    }
-    /* mealtime container for mobile */
-    .mealtime-image img{
-      padding-top: 20px;
-      padding-left: 100px;  
-  }
+   
        
 }
